gcc/testsuite/rust/rustc/ui/parser/int-literal-too-large-span.rs
// issue #17123

fn main() {
    9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
// { dg-error "" "" { target *-*-* } .-1 }
        ; // the span shouldn't point to this.
}

